--- a/css/login.css
+++ b/css/login.css
@@ -81,3 +81,85 @@ body{
     border-left: 1px solid #70AD47;
     font-size: 17px;
 }
+
+@media screen and (min-width: 1200px) {
+    /* 여기에 PC 버전의 스타일을 정의합니다. */
+
+  }
+  
+  /* 태블릿 버전 */
+  /* 480px 이상 ~ 1200px 미만일 때 적용 */
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    /* 여기에 태블릿 버전의 스타일을 정의합니다. */
+    #mainFont{
+        padding-top:50px;
+        font-size:60px;
+    }
+   
+    
+  }
+  
+  /* 모바일 버전 */
+  /* 320px 이상 ~ 480px 미만일 때 적용 */
+  @media screen and (max-width: 479px) {
+    /* 여기에 모바일 버전의 스타일을 정의합니다. */
+        
+    #mainFont{
+        padding-top:50px;
+        font-size:30px;
+    }
+    .insertBox{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        font-size:15px;
+    }
+    #idBox{
+        margin-left:16px;
+        width:125px;
+        height: 25px;
+        border-radius: 5px;
+        border: 1px solid #70AD47;
+    }
+    #pwBox{
+        width:125px;
+        height: 25px;
+        margin-left:12.5px;
+        margin-right:10px;
+        border-radius: 5px;
+        border: 1px solid #70AD47;
+    }
+    #button{
+        width:100px;
+        height: 40px;
+        background-color: #70AD47;
+        border-radius: 7.5px;
+        color:#FFFFFF;
+        font-size: 15px;
+        border-color: #70AD47;
+        margin-top: 15px;
+    }
+    .linkFont{
+        text-align: center;
+        text-decoration: none; 
+        color: inherit;
+        margin-left:7.5px;
+        margin-right:7.5px;
+        font-size: 14px;
+    }
+    #middleLinkFont{
+        text-align: center;
+        text-decoration: none; 
+        color: inherit;
+        /* margin-left:7.5px;
+        margin-right:7.5px; */
+        padding-left:7.5px;
+        padding-right:7.5px;
+        border-right: 1px solid #70AD47;
+        border-left: 1px solid #70AD47;
+        font-size: 14px;
+    }
+  }
+  
